# silpkg

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs  progress.rs  spinner.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: errors.rs  ioext.rs  lib.rs  sync.rs  util.rs
src/base/: common.rs  mod.rs  parse.rs  read.rs  write.rs
tests/: sync.rs
tests/data/: lorem1024.txt  lorem16384.txt  lorem4096.txt  lorem512.txt  mod.rs
