[workspace]
members = ["cli"]

[package]
name = "silpkg"
edition = "2021"
authors = ["Fishhh"]
license = "MIT OR Apache-2.0"
description = "A library for working with SIL PKG archives"

[features]
default = ["std"]
std = ["log/std", "thiserror/std"]
unstable_base = []

[dependencies]
# TODO: Make deflate support optional
flate2 = { version = "1.0" } #, features = ["zlib-ng"], default-features = false }
bitflags = "2"
log = { version = "0.4", default-features = false }
thiserror = { package = "thiserror-core", version = "1", default-features = false }
hashbrown = "0.14"

macros = { package = "silpkg-macros", path = "./macros", default-features = false }

[dev-dependencies]
# Enable logging during testing
test-log = "0.2.11"
env_logger = "0.11"
# Generate random test data
rand = "0.8"
