[workspace]
members = ["cli"]

[package]
name = "silpkg"
description = "A library for working with SIL's PKG archives"
repository = "https://github.com/afishhh/silpkg"
version = "0.1.0"
edition = "2021"
authors = ["Fishhh"]
license = "MIT OR Apache-2.0"
publish = true

[features]
default = ["std"]
std = ["log/std", "thiserror/std"]
unstable_base = []

[dependencies]
# TODO: Make deflate support optional
flate2 = { version = "1" }
bitflags = "2"
log = { version = "0.4", default-features = false }
thiserror = { package = "thiserror-core", version = "1", default-features = false }
hashbrown = "0.14"

macros = { package = "silpkg-macros", version = "0.1", path = "./macros", default-features = false }

[dev-dependencies]
# Enable logging during testing
test-log = "0.2.11"
env_logger = "0.11"
# Generate random test data
rand = "0.8"
