[workspace]
members = ["cli"]

[package]
name = "silpkg"
description = "A library for working with SIL's PKG archives"
repository = "https://github.com/afishhh/silpkg"
version = "0.1.3"
edition = "2021"
authors = ["Fishhh"]
license = "GPL-3.0-or-later"
publish = true

[features]
default = ["std"]
std = ["log/std", "thiserror/std"]
unstable_base = []

[dependencies]
# TODO: Make deflate support optional
flate2 = { version = "1" }
bitflags = "2"
log = { version = "0.4", default-features = false }
thiserror = { version = "2", default-features = false }
hashbrown = "0.15"

macros = { package = "silpkg-macros", version = "0.2", path = "./macros", default-features = false }

[dev-dependencies]
# Enable logging during testing
test-log = "0.2.11"
env_logger = "0.11"
# Generate random test data
rand = "0.8"
