[package]
name = "silpkg-macros"
description = "Helper crate for silpkg, permanently unstable"
repository = "https://github.com/afishhh/silpkg"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit-mut", "parsing"] }
quote = "1"
proc-macro2 = "1"
